tests/snapshots/snapshot_ir_translations__codex_ir__codex_ir_roundtrip_request.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&back"
---
{
  "model": "codex-mini-latest",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Generate unit tests"
        }
      ]
    }
  ],
  "config": {}
}
