tests/snapshots/snapshot_ir_translations__codex_ir__codex_response_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir"
---
{
  "id": "resp_codex_01",
  "model": "codex-mini-latest",
  "content": [
    {
      "type": "text",
      "text": "Here are the test cases."
    }
  ],
  "stop_reason": "end_turn",
  "usage": {
    "input_tokens": 40,
    "output_tokens": 60,
    "total_tokens": 100,
    "cache_read_tokens": 0,
    "cache_write_tokens": 0
  }
}
