tests/snapshots/snapshot_ir_translations__codex_ir__codex_stream_event_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir_events"
---
[
  {
    "type": "text_delta",
    "index": 0,
    "text": "fn test"
  }
]
